--- a/templates/papu.html
+++ b/templates/papu.html
@@ -3,9 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.datatables.net/2.2.2/css/dataTables.dataTables.css"/>
     <title>Document</title>
 </head>
 <body>
-    holaaaa
+    <table id="myTable" class="display">
+        <thead>
+            <tr>
+                <th>Model</th>
+                <th>Branch</th>
+                <th>Year</th>
+                <th>Color</th>
+                <th>Transmition</th>
+                <th>Engine</th>
+                <th>Liters</th>
+                <th>Hp</th>
+                <th>Doors</th>
+                <th>Type of car</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Row 1 Data 1</td>
+                <td>Row 1 Data 2</td>
+                <td>Row 1 Data 1</td>
+                <td>Row 1 Data 2</td>
+                <td>Row 1 Data 1</td>
+                <td>Row 1 Data 2</td>
+                <td>Row 1 Data 1</td>
+                <td>Row 1 Data 2</td>
+                <td>Row 1 Data 1</td>
+                <td>Row 1 Data 2</td>
+            </tr>
+        </tbody>
+    </table>
+    <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
+    <script src="https://cdn.datatables.net/2.2.2/js/dataTables.js"></script>
+    <script>
+        // Inicializa DataTable
+        $(document).ready(function () {
+            $('#myTable').DataTable();
+        });
+    </script>
 </body>
 </html>
