--- a/templates/venta.html
+++ b/templates/venta.html
@@ -9,30 +9,34 @@
 </head>
 <body>
     <h1>LOTE DE CARROS</h1>
-    <div class="input-group mb-3">
-        <span class="input-group-text">$</span>
-        <input placeholder= "Ingrese el porcentaje de enganche (entre 20 y 50):" type="text" class="form-control" aria-label="Amount (to the nearest dollar)">
-        <span class="input-group-text">.00</span>
-      </div>
+    <form class="row g-3">
+        <div class="col-auto">
+          <label for="inputPassword2" class="visually-hidden">Password</label>
+          <input type="text" class="form-control" style="width: 400px;" id="inputPassword2" placeholder="Ingrese el porcentaje de enganche (entre 20 y 50): ">
+        </div>
+        <div class="col-auto">
+          <button type="submit" class="btn btn-primary mb-3">Confirm</button>
+        </div>
+      </form>
       
     <table id="myTable" class="display">
         <thead>
             <tr>
-                <th>Meses</th>
-                <th>Enganche</th>
-                <th>Mensualidad</th>
-                <th>Interes</th>
-                <th>Monto Total con Interes</th>
+                <th style="text-align: center;">Meses</th>
+                <th style="text-align: center;">Enganche</th>
+                <th style="text-align: center;">Mensualidad</th>
+                <th style="text-align: center;">Interes</th>
+                <th style="text-align: center;">Monto Total con Interes</th>
             </tr>
         </thead>
         <tbody>
             {% for auto in autos %}
             <tr>
-                <td>${item.meses}</td>
-                <td>${item.enganche}</td>
-                <td>${item.mensualidad}</td>
-                <td>${item.interes}</td>
-                <td>${item.monto_total_con_interes}</td>
+                <td style="text-align: center;">${item.meses}</td>
+                <td style="text-align: center;">${item.enganche}</td>
+                <td style="text-align: center;">${item.mensualidad}</td>
+                <td style="text-align: center;">${item.interes}</td>
+                <td style="text-align: center;">${item.monto_total_con_interes}</td>
             </tr>
             {% endfor %}
         </tbody>
