--- a/templates/venta.html
+++ b/templates/venta.html
@@ -45,6 +45,7 @@
             </table>
         </div>
     </section>
+    <h1>Ayuda diio</h1>
     
     <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
     <script src="https://cdn.datatables.net/2.2.2/js/dataTables.js"></script>
