--- a/templates/venta.html
+++ b/templates/venta.html
@@ -12,7 +12,28 @@
         <h1>Lote de Carros</h1>
     </header>
     
-    
+    <section class="my-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <h2>Detalles del Carro</h2>
+                    <ul class="list-group">
+                        <li class="list-group-item"><strong>Modelo:</strong> ${car.model}</li>
+                        <li class="list-group-item"><strong>Marca:</strong> ${car.branch}</li>
+                        <li class="list-group-item"><strong>Año:</strong> ${car.year}</li>
+                        <li class="list-group-item"><strong>Color:</strong> ${car.color}</li>
+                        <li class="list-group-item"><strong>Transmisión:</strong> ${car.transmition}</li>
+                        <li class="list-group-item"><strong>Motor:</strong> ${car.engine}</li>
+                        <li class="list-group-item"><strong>Litros:</strong> ${car.liters}</li>
+                        <li class="list-group-item"><strong>HP:</strong> ${car.hp}</li>
+                        <li class="list-group-item"><strong>Puertas:</strong> ${car.doors}</li>
+                        <li class="list-group-item"><strong>Tipo de Carro:</strong> ${car.car_type}</li>
+                        <li class="list-group-item"><strong>Precio:</strong> ${car.precio}</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
     <section class="my-5"></section>
         <div class="container">
             <table id="myTable" class="display">
