--- a/templates/papu.html
+++ b/templates/papu.html
@@ -41,7 +41,7 @@
                 <td style="text-align: center;">{{auto.hp}}</td>
                 <td style="text-align: center;">{{auto.doors}}</td>
                 <td style="text-align: center;">{{auto.car_type}}</td>
-                <td style="text-align: center;">{{auto.precio}}</td>
+                <td style="text-align: center;">${{auto.precio}}</td>
                 <td style="text-align: center;">
                         
                     <a href="{{ url_for('venta') }}" type="button" class="btn btn-primary"  id="{{ auto.id }}"onclick="openNewTab(id)">
