--- a/templates/Login.html
+++ b/templates/Login.html
@@ -43,7 +43,7 @@
     </header>
     <main>
         <div class="form-container"></div>
-            <form action="/queue" method="post">
+            <form action="/queue" method="POST">
                 <div class="form-group"></div>
                     <label for="name">Nombre:</label>
                     <input type="text" class="form-control" id="name" name="name" required>
