--- a/templates/Login.html
+++ b/templates/Login.html
@@ -53,7 +53,7 @@
             </form>
         </div>
         <div class="form-container">
-            {% if queue or waitlist %}
+            {% if queue  %}
                 <p>Queue: {{ queue }}</p>
             {% endif %}
             {% if waitlist %}
