--- a/templates/Login.html
+++ b/templates/Login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Line</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
@@ -12,6 +12,7 @@
             min-height: 100vh;
             margin: 0;
             font-family: Arial, sans-serif;
+            background-color: red;
         }
         header, footer {
             background-color: #f8f9fa;
@@ -31,49 +32,46 @@
             border-radius: 5px;
             background-color: #fff;
         }
-        .github-icon {
-            width: 24px;
-            height: 24px;
-        }
     </style>
 </head>
 <body>
     <header>
-        <h1>Login</h1>
+        <h1 class="h2">Lista espera Boletos F1</h1>
     </header>
     <main>
 
         <div class="form-container">
             <form action="/queue" method="POST">
-                <label for="name">Nombre:</label>
+                <label for="name">Name:</label>
                 <input type="text" id="name" name="name" autofocus required>
+                <br>
                 <br>
                 <button type="submit">Enviar</button>
 
             </form>
         </div>
         <div class="form-container">
-            <h3>Current Users</h3>
+            <h3>Next in line</h3>
             {% if queue or waitlist %}
                 <p>Queue: {{ queue }}</p>
+            {% else %}
+                <p>No one in queue</p>
             {% endif %}
             <form action="/dequeue" method="POST">
-                <button type="submit">Logout</button>
+                <button type="submit">Proceed to buy</button>
             </form>
         </div>
         <div class="form-container">
-            <h3>Wait List</h3>
+            <h3>WaitList for tickets</h3>
             {% if waitlist %}
-                <p>Waitlist: {{ waitlist }}</p>
+                <p>Waitlist: {{ waitlist|length }}</p>
+            {% else %}
+                <p>Waitlist: 0</p>
             {% endif %}
 
             
         </div>
-
     </main>
-    <footer>
-        <p>Encuéntranos en <a href="https://github.com"><img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt="GitHub" class="github-icon"></a></p>
-    </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
